--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,7 +31,7 @@ html {
     grid-row: 2;
     display: flex;
     flex-direction: column;
-    padding: 3rem;
+    padding: 5rem 3rem 3rem;
   }
 
   &__link {
