--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,26 +31,32 @@ html {
     grid-row: 2;
     display: flex;
     flex-direction: column;
-    padding: 5rem 3rem 3rem;
+    padding: 5rem 3rem;
   }
 
   &__link {
     color: $black;
+    text-decoration: underline;
 
     &:link {
-      text-decoration: none;
+      text-decoration: underline;
+     
     }
 
     &:visited {
-      text-decoration: none;
+      text-decoration: underline;
     }
 
     &:hover {
-      text-decoration: none;
+      text-decoration: underline;
+      transition: 0.3s;
+      color: $grey-neutral;
     }
 
     &:active {
-      text-decoration: none;
+      text-decoration: underline;
+      transition: 0.3s;
+      color: $grey-light;
     }
   }
 
