--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,10 +1,42 @@
 @font-face {
-  font-family: "Inter";
+  font-family: 'Inter';
   font-style: normal;
-  font-weight: normal;
-  font-display: swap;
-  src: url("@assets/fonts/Inter-Medium.woff2") format("woff2");
+  font-weight: 200;
+  src: url('@assets/fonts/Inter/static/Inter-ExtraLight.ttf') format('truetype')
 }
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('@assets/fonts/Inter/static/Inter-Regular.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  src: url('@assets/fonts/Inter/static/Inter-Medium.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  src: url('@assets/fonts/Inter/static/Inter-SemiBold.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: url('@assets/fonts/Inter/static/Inter-Bold.ttf') format('truetype')
+}
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  src: url('@assets/fonts/Inter/static/Inter-ExtraBold.ttf') format('truetype')
+}
+
+
 
 
 
