--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -82,7 +82,9 @@ html {
     gap: 1.5rem;
     margin: 3.425rem 0 0 2rem;
 
-
+    @media (width < $tablet) {
+      gap: 3rem;
+    }
 
     &__element {
       font-size: 1rem;
