fix scroll issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,7 +25,7 @@ html {
 
 .text {
   grid-column: 1;
-  padding: 1.8rem 3.56rem 7.025rem 0;
+  padding: 1.8rem 3.56rem 2.2rem 0;
 
   @media (width < $tablet) {
     grid-row: 2;
@@ -92,7 +92,7 @@ html {
       line-height: 4rem;
     }
 
-    &__footer {
+    &__footer-text {
       display: flex;
       align-items: stretch;
       gap: 0.625rem;
